# squeeze

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py  squeeze.h
examples/: CMakeLists.txt  Main.cc  README.md
examples/namco/: Lz0103.cc  Lz0103.h  Lz0103Data.h  Lz80.cc  Lz80.h
python/: CMakeLists.txt  squeeze.cc
python/pysqueeze/: __init__.py  namco.py
python/squeeze/: namco.py
python/tests/: test_examples.py
