[build-system]
requires = ["setuptools", "wheel", "scikit-build>=0.15", "cmake>=3.21", "ninja; platform_system!='Windows'"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["auto64"]
manylinux-x86_64-image = "manylinux2014-clang"
manylinux-pypy_x86_64-image = "manylinux2014-clang"
test-requires = "pytest"
test-command = "pytest {project}/python/tests"

[tool.cibuildwheel.linux]
environment = { CC = "clang", CXX = "clang++" }
